learning_k8s/renter-chart/templates/busybox.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-info
  namespace: rental

spec:
  selector:
    matchLabels:
      app: node-info

  template:
    metadata:
      labels:
        app: node-info

    spec:
      containers:
      - name: node-info
        image: busybox:1.36
        command:
        - sh
        - -c
        - |
          while true; do
            echo "Running on $(hostname)"
            sleep 30
          done
