learning_k8s/renter-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: renter-ingress
  namespace: rental

spec:
  ingressClassName: nginx
  rules:
    - host: renter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 80
